--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-
+<!-- 
   <div class="wrap">
 
     <h2 class="footer-heading">{{ site.title }}</h2>
@@ -56,6 +56,6 @@
       <p class="text">{{ site.description }}</p>
     </div>
 
-  </div>
+  </div> -->
 
 </footer>
