Added a number of styles & content. Structure is coming together.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,23 @@
 <header class="site-header">
-
-  <div class="row">
-
-    <h1><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-
-  </div>
-
+    <div class="row">
+        <div class="small-12 medium-4 columns">
+            <h1 class="site-title">
+            <a href="{{ site.baseurl }}/">
+            {{ site.title }}
+            </a>
+            </h1>
+        </div>
+        <div class="small-6 medium-2 columns nav-link">
+            <h5><a href="/#work">WORK</a></h5>
+        </div>
+        <div class="small-6 medium-2 columns nav-link">
+            <h5><a href="/#about">ABOUT</a></h5>
+        </div>
+        <div class="small-6 medium-2 columns nav-link">
+            <h5><a href="/blog">BLOG</a></h5>
+        </div>
+        <div class="small-6 medium-2 columns nav-link">
+            <h5><a href="/#hire">HIRE ME</a></h5>
+        </div>
+    </div>
 </header>
