--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,6 @@
 @import "settings";
 @import "foundation";
+@import "compass";
 
 // Or selectively include components
 // @import
@@ -38,3 +39,4 @@
 //   "foundation/components/type",
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
+@import "graybike";
