--- a/scss/_graybike.scss
+++ b/scss/_graybike.scss
@@ -1,4 +1,16 @@
 $title-size: rem-calc(53);
+
+//Global Styles
+
+a {
+  color: $gray_b1;
+  border-bottom: 1px dotted;
+}
+
+a:hover {
+  border-bottom: none;
+}
+
 //Header Styles
 .site-header {
   margin-top: rem-calc(30);
@@ -25,8 +37,11 @@ $title-size: rem-calc(53);
 
 .nav-link {
   text-align: center;
-  // margin-bottom: rem-calc(10);
+  a {
+    border: none;
+  }
   .hire {
+    color: $gray;
     border: 3px solid $gray;
     padding: 5px;
   }
