--- a/scss/_graybike.scss
+++ b/scss/_graybike.scss
@@ -64,3 +64,13 @@ a:hover {
   text-align: center;
   @include text-shadow(0px 2px 0px rgba(255, 255, 255, 1));
 }
+
+//Work Styles
+.project {
+  div {
+    padding: rem-calc(10);
+    width: 100%;
+    height: 100%;
+  }
+  margin-bottom: rem-calc(15);
+}
