--- a/scss/_graybike.scss
+++ b/scss/_graybike.scss
@@ -67,10 +67,12 @@ a:hover {
 
 //Work Styles
 .project {
-  div {
-    padding: rem-calc(10);
-    width: 100%;
-    height: 100%;
+  img {
+    border: 2px solid $gray;
+    opacity: 0.6;
+    &:hover {
+      opacity: 1;
+    }
   }
   margin-bottom: rem-calc(15);
 }
