--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,15 @@
+<div class="row">
+<div class="small-10 small-offset-1 columns">
+  <hr>
+  </div>
+</div>
+
 <footer class="site-footer">
+  <div class="row">
+    <div class="small-12 columns text-center">
+      <p>COPYRIGHT © 2014 GRAY BIKE</p>
+    </div>
+  </div>
 <!-- 
   <div class="wrap">
 
