--- a/scss/_graybike.scss
+++ b/scss/_graybike.scss
@@ -44,12 +44,16 @@ a:hover {
     color: $gray;
     border: 3px solid $gray;
     padding: 5px;
+    @include transition-duration(0.3s);
+    @include transition-timing-function(ease-out);
   }
 
   .hire:hover {
     border: 3px solid $gray;
     color: #fff;
     background: $gray;
+    @include transition-duration(0.3s);
+    @include transition-timing-function(ease-out);
   }
 }
 
