Added logo, other styles.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,12 @@
 <header class="site-header">
     <div class="row">
         <div class="small-12 medium-4 columns">
-            <h1 class="site-title">
-            <a href="{{ site.baseurl }}/">
-            {{ site.title }}
-            </a>
-            </h1>
+            <div class="site-title bounceIn animated">
+                <div class="site-text"><a href="{{ site.baseurl }}/"><span>
+                {{ site.title }}
+                </span></a></div>
+                <a href="{{ site.baseurl }}/"><img src="/images/logo.png"></a>
+            </div>
         </div>
         <div class="small-6 medium-2 columns nav-link">
             <h5><a href="/#work">WORK</a></h5>
