--- a/scss/app.scss
+++ b/scss/app.scss
@@ -39,4 +39,6 @@
 //   "foundation/components/type",
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
+
+@import "base";
 @import "graybike";
