--- a/scss/_graybike.scss
+++ b/scss/_graybike.scss
@@ -15,13 +15,30 @@ a:hover {
 .site-header {
   margin-top: rem-calc(30);
   margin-bottom: rem-calc(20);
+
   .site-title{
     font-family: "Open Sans Condensed", "Open Sans", sans-serif;
     font-weight: 700;
     font-size: $title-size;
     text-align: center;
     margin-bottom: rem-calc(20);
+    padding-top: 20px;
+    height: 93px;
+    overflow: hidden;
+    img {
+      padding-top: 10px;
+    }
+    div {
+       @include transition(all 0.2s ease-in-out);
+       backface-visibility: hidden;
+    }
     a, a:hover {
+      border: none;
+    }
+    &:hover div {
+      margin-top: -93px;
+    }
+    span, span:hover {
       border-top: rem-calc(10) solid $gray_b1;
       border-bottom: rem-calc(10) solid $gray_b1;
       color: $gray;
@@ -29,11 +46,6 @@ a:hover {
   }
 }
 
-.taglines {
-  text-align: center;
-  margin: rem-calc(40) 0;
-  @include text-shadow(0px 2px 0px rgba(255, 255, 255, 1));
-}
 
 .nav-link {
   text-align: center;
@@ -57,26 +69,42 @@ a:hover {
   }
 }
 
-// @media #{$medium-up} { 
-//   .nav-link {
-//       line-height: $title-size * $header-line-height;
-//   }
-// }
 
-//Index Styles
-.section-header {
-  text-align: center;
-  @include text-shadow(0px 2px 0px rgba(255, 255, 255, 1));
-}
-
-//Work Styles
-.project {
-  img {
-    border: 2px solid $gray;
-    opacity: 0.6;
-    &:hover {
-      opacity: 1;
-    }
+.home {
+  .taglines {
+    text-align: center;
+    margin: rem-calc(40) 0;
+    @include text-shadow(0px 2px 0px rgba(255, 255, 255, 1));
   }
-  margin-bottom: rem-calc(15);
+
+
+  // @media #{$medium-up} { 
+  //   .nav-link {
+  //       line-height: $title-size * $header-line-height;
+  //   }
+  // }
+
+  //Index Styles
+  .section-header {
+    text-align: center;
+    @include text-shadow(0px 2px 0px rgba(255, 255, 255, 1));
+    font-weight: 600;
+  }
+
+  //Work Styles
+  .project {
+    img {
+      border: 2px solid $gray;
+      opacity: 0.6;
+      &:hover {
+        opacity: 1;
+      }
+    }
+    margin-bottom: rem-calc(15);
+  }
+
+  .row.section {
+    margin-top: rem-calc(30);
+    margin-bottom: rem-calc(30);
+  }
 }
