--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -82,8 +82,8 @@ $primary-color: $gray;
 // $column-gutter: rem-calc(30);
 
 // Media Query Ranges
-// $small-range: (0em, 40em);
-// $medium-range: (40.063em, 64em);
+$small-range: (0em, rem-calc(735));
+$medium-range: (rem-calc(736), 64em);
 // $large-range: (64.063em, 90em);
 // $xlarge-range: (90.063em, 120em);
 // $xxlarge-range: (120.063em, 99999999em);
