Added logos of people I've worked with.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
     <p>Interested in working together? <a href="/#hire">Let's Talk.</a></p>
 </div>
 <div class="small-12 columns">
-    <h2 class="section-header"><small>SERVICES OFFERED</small></h2>
+    <h5 class="section-subheader">SERVICES OFFERED</h5>
     <div class="small-12 medium-5 columns">
         <h5 class="section-header">Technical</h5>
         <ul>
@@ -26,5 +26,19 @@
     </div>
 </div>
 <div class="small-12 columns">
-    <h2 class="section-header"><small>FOLKS I'VE WORKED WITH</small></h2>
+    <div class="small-12 columns">
+      <h5 class="section-subheader">FOLKS I'VE WORKED WITH</h5>
+    </div>
+    <div class="small-6 medium-3 columns">
+      <img class="client-logo" src="/images/logos/macys.png">
+    </div>
+    <div class="small-6 medium-3 columns">
+      <img class="client-logo" src="/images/logos/ceh.png">
+    </div>
+    <div class="small-6 medium-3 columns">
+      <img class="client-logo" src="/images/logos/oncontracting.png">
+    </div>
+    <div class="small-6 medium-3 columns">
+      <img class="client-logo" src="/images/logos/2teecouture.png">
+    </div>
 </div>
