--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,19 +1,27 @@
 <div class="small-12 columns">
     <h3 class="section-header">WORK</h3>
-    <div class="small-12 medium-4 columns project text-center">
-        <img src="/images/truecurrency/tc-thumbnail.png">
-        <h3><small>True Currency</small></h3>
+    <div class="row">
+        <div class="small-12 medium-4 columns project text-center">
+            <img src="/images/work/truecurrency/tc-thumbnail.png">
+            <h3><small>True Currency</small></h3>
+        </div>
+        <div class="small-12 medium-4 columns project text-center">
+            <img src="/images/work/2teecouture/2tee-thumbnail.png">
+            <h3><small>2tee Couture</small></h3>
+        </div>
+        <div class="small-12 medium-4 columns project text-center">
+            <img src="/images/work/salt/salt-thumbnail.png">
+            <h3><small>SALT Technologies</small></h3>
+        </div>
     </div>
-    <div class="small-12 medium-4 columns project text-center">
-        <img src="/images/2teecouture/2tee-thumbnail.png">
-        <h3><small>2tee Couture</small></h3>
-    </div>
-    <div class="small-12 medium-4 columns project text-center">
-        <img src="/images/salt/salt-thumbnail.png">
-        <h3><small>SALT Technologies</small></h3>
+    <div class="row">
+        <div class="small-12 medium-4 columns project text-center">
+            <img src="/images/work/oncontracting/oc-thumbnail.png">
+            <h3><small>OnContracting</small></h3>
+        </div>
     </div>
 </div>
 <div class="small-12 columns">
-    <h2 class="section-header"><small>WHAT THEY SAY</small></h2>
+    <h5 class="section-subheader">WHAT THEY SAY</h5>
 <blockquote>I do not fear computers. I fear the lack of them. Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.<cite>Isaac Asimov</cite></blockquote>
 </div>
