adding we's instead of i's

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -27,7 +27,7 @@
 </div>
 <div class="small-12 columns">
     <div class="small-12 columns">
-      <h5 class="section-subheader">FOLKS I'VE WORKED WITH</h5>
+      <h5 class="section-subheader">SOME FOLKS WE'VE WORKED WITH</h5>
     </div>
     <div class="small-6 medium-3 columns">
       <img class="client-logo" src="/images/logos/macys.png">
