--- a/_includes/work.html
+++ b/_includes/work.html
@@ -22,6 +22,6 @@
     </div>
 </div>
 <div class="small-12 columns">
-    <h5 class="section-subheader">WHAT THEY SAY</h5>
+    <h5 class="section-subheader">WHAT OUR CLIENTS SAY</h5>
 <blockquote>I do not fear computers. I fear the lack of them. Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.<cite>Isaac Asimov</cite></blockquote>
 </div>
