more logos & indentation. better grid for logos.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,44 +1,55 @@
 <div class="small-12 columns">
-    <h3 class="section-header">ABOUT</h3>
+  <h3 class="section-header">ABOUT</h3>
 </div>
 <div class="small-12 columns">
-    <p>Gray Bike is a software consultancy ran by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I've got over 8 years of experience building things for the web and mobile. I help small businesses, non-profits, and startups use technology to solve their business problems. I work by myself and hire people on a per-project basis as needed.</p>
-    <p>In addition to helping folks build technology, I am co-founder and chief technologist of <a href="http://www.truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. I also mentor students learning front-end web development at <a href="http://www.thinkful.com/">Thinkful</a>.</p>
-    <p>Interested in working together? <a href="/#hire">Let's Talk.</a></p>
+  <p>Gray Bike is a software consultancy ran by me, Pavan Trikutam. I'm an entrepreneur, developer, and designer living in San Francisco. I've got over 8 years of experience building things for the web and mobile. I help small businesses, non-profits, and startups use technology to solve their business problems. I work by myself and hire people on a per-project basis as needed.</p>
+  <p>In addition to helping folks build technology, I am co-founder and chief technologist of <a href="http://www.truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. I also mentor students learning front-end web development at <a href="http://www.thinkful.com/">Thinkful</a>.</p>
+  <p>Interested in working together? <a href="/#hire">Let's Talk.</a></p>
 </div>
 <div class="small-12 columns">
-    <h5 class="section-subheader">SERVICES OFFERED</h5>
-    <div class="small-12 medium-5 columns">
-        <h5 class="section-header">Technical</h5>
-        <ul>
-            <li>Full Stack Web Design & Development (Back & Front End)</li>
-            <li>Android Design & Development</li>
-            <li>Shopify Apps & Themes</li>
-        </ul>
-    </div>
-    <div class="small-12 medium-5 medium-offset-2 columns">
-        <h5 class="section-header">Non-Technical</h5>
-        <ul>
-            <li>UX Design</li>
-            <li>Content Strategy</li>
-            <li>Product Development</li>
-        </ul>
-    </div>
+  <h5 class="section-subheader">SERVICES OFFERED</h5>
+  <div class="small-12 medium-5 columns">
+    <h5 class="section-header">Technical</h5>
+    <ul>
+      <li>Full Stack Web Design & Development (Back & Front End)</li>
+      <li>Android Design & Development</li>
+      <li>Shopify Apps & Themes</li>
+    </ul>
+  </div>
+  <div class="small-12 medium-5 medium-offset-2 columns">
+    <h5 class="section-header">Non-Technical</h5>
+    <ul>
+      <li>UX Design</li>
+      <li>Content Strategy</li>
+      <li>Product Development</li>
+    </ul>
+  </div>
 </div>
 <div class="small-12 columns">
+  <div class="row">
     <div class="small-12 columns">
       <h5 class="section-subheader">SOME FOLKS WE'VE WORKED WITH</h5>
     </div>
-    <div class="small-6 medium-3 columns">
-      <img class="client-logo" src="/images/logos/macys.png">
+  </div>
+  <div class="row">
+    <div class="small-12 columns">
+      <ul class="small-block-grid-2 medium-block-grid-3">
+        <li>
+          <img class="client-logo" src="/images/logos/macys.png">
+        </li>
+        <li>
+          <img class="client-logo" src="/images/logos/ceh.png">
+        </li>
+        <li>
+          <img class="client-logo" src="/images/logos/oncontracting.png">
+        </li>
+        <li>
+          <img class="client-logo" src="/images/logos/2teecouture.png">
+        </li>
+        <li>
+          <img class="client-logo" src="/images/logos/backcountry.png">
+        </li>
+      </ul>
     </div>
-    <div class="small-6 medium-3 columns">
-      <img class="client-logo" src="/images/logos/ceh.png">
-    </div>
-    <div class="small-6 medium-3 columns">
-      <img class="client-logo" src="/images/logos/oncontracting.png">
-    </div>
-    <div class="small-6 medium-3 columns">
-      <img class="client-logo" src="/images/logos/2teecouture.png">
-    </div>
+  </div>
 </div>
