Added logos and updated styles.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -33,7 +33,7 @@
   </div>
   <div class="row">
     <div class="small-12 columns">
-      <ul class="small-block-grid-2 medium-block-grid-3">
+      <ul class="small-block-grid-2 medium-block-grid-4">
         <li>
           <img class="client-logo" src="/images/logos/macys.png">
         </li>
@@ -41,13 +41,23 @@
           <img class="client-logo" src="/images/logos/ceh.png">
         </li>
         <li>
-          <img class="client-logo" src="/images/logos/oncontracting.png">
+          <img class="client-logo" src="/images/logos/backcountry.png">
         </li>
+         <li>
+          <img class="client-logo" src="/images/logos/1800flowers.png">
+        </li>
+
         <li>
           <img class="client-logo" src="/images/logos/2teecouture.png">
         </li>
         <li>
-          <img class="client-logo" src="/images/logos/backcountry.png">
+          <img class="client-logo" src="/images/logos/salt.png">
+        </li>
+        <li>
+          <img class="client-logo" src="/images/logos/oncontracting.png">
+        </li>
+        <li>
+          <img class="client-logo" src="/images/logos/designlikewhoa.png">
         </li>
       </ul>
     </div>
