--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,6 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/stylesheets/app.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/app.css" | prepend: site.baseurl }}">
 
 </head>
