Changed wording to individual, added some color.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -28,7 +28,7 @@
 <div class="small-12 columns">
   <div class="row">
     <div class="small-12 columns">
-      <h5 class="section-subheader">SOME FOLKS WE'VE WORKED WITH</h5>
+      <h5 class="section-subheader">SOME FOLKS I'VE WORKED WITH</h5>
     </div>
   </div>
   <div class="row">
@@ -41,12 +41,11 @@
           <img class="client-logo" src="/images/logos/ceh.png">
         </li>
         <li>
-          <img class="client-logo" src="/images/logos/backcountry.png">
+          <img class="client-logo" src="/images/logos/bloomingdales.png">
         </li>
-         <li>
-          <img class="client-logo" src="/images/logos/1800flowers.png">
+        <li>
+          <img class="client-logo" src="/images/logos/designlikewhoa.png">
         </li>
-
         <li>
           <img class="client-logo" src="/images/logos/2teecouture.png">
         </li>
@@ -57,7 +56,7 @@
           <img class="client-logo" src="/images/logos/oncontracting.png">
         </li>
         <li>
-          <img class="client-logo" src="/images/logos/designlikewhoa.png">
+          <img class="client-logo" src="/images/logos/1800flowers.png">
         </li>
       </ul>
     </div>
