--- a/_includes/work.html
+++ b/_includes/work.html
@@ -24,7 +24,7 @@
   </div>
   <div class="row">
     <div class="small-12 columns">
-      <h5 class="section-subheader">WHAT OUR CLIENTS SAY</h5>
+      <h5 class="section-subheader">WHAT MY CLIENTS SAY</h5>
       <blockquote>I do not fear computers. I fear the lack of them. Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.<cite>Isaac Asimov</cite></blockquote>
     </div>
   </div>
