Added color, added profile picture, and messed with styles.

--- a/_includes/hireme.html
+++ b/_includes/hireme.html
@@ -1,5 +1,5 @@
 <div class="small-12 columns">
-    <h3 class="section-header orange">HIRE ME</h3>
+    <h3 class="section-header">HIRE ME</h3>
 </div>
 <div class="small-12 medium-4 columns">
     <p>Got a cool project? I'd love to hear about it! Send me a little info and we'll get started!</p>
