--- a/_includes/work.html
+++ b/_includes/work.html
@@ -28,3 +28,4 @@
       <blockquote>I do not fear computers. I fear the lack of them. Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.<cite>Isaac Asimov</cite></blockquote>
     </div>
   </div>
+</div>
