--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -19,9 +19,7 @@ $gray: #767676;
 $gray_b1: #A5A5A5;
 $gray_b2: lighten($gray, 40%);
 
-$blue: #07baf2;
-
-$orange: #f09246;
+$blue: #00688A;
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
