--- a/scss/_graybike.scss
+++ b/scss/_graybike.scss
@@ -11,8 +11,8 @@ a:hover {
   border-bottom: none;
 }
 
-.orange {
-  color: $orange;
+.blue {
+  color: $blue;
 }
 
 //Header Styles
@@ -56,17 +56,17 @@ a:hover {
     border: none;
   }
   .hire {
-    color: $orange;
-    border: 3px solid $orange;
+    color: $blue;
+    border: 3px solid $blue;
     padding: 5px;
     @include transition-duration(0.3s);
     @include transition-timing-function(ease-out);
   }
 
   .hire:hover {
-    border: 3px solid $orange;
+    border: 3px solid $blue;
     color: #fff;
-    background: $orange;
+    background: $blue;
     @include transition-duration(0.3s);
     @include transition-timing-function(ease-out);
   }
@@ -77,9 +77,9 @@ a:hover {
   .taglines {
     text-align: center;
     margin: rem-calc(40) 0;
-    @include text-shadow(0px 1px 0px $gray_b2);
+    // @include text-shadow(0px 1px 0px $gray_b2);
     h2 {
-      color: $orange;
+      color: #fff;
     }
   }
 
@@ -93,15 +93,16 @@ a:hover {
   //Index Styles
   .section-header {
     text-align: center;
-    @include text-shadow(0px 1px 0px $gray_b2);
+    // color: $blue;
+    // @include text-shadow(0px 1px 0px $gray_b2);
     font-weight: 600;
     margin-bottom: rem-calc(30);
   }
 
   .section-subheader {
     text-align: center;
-    @include text-shadow(0px 1px 0px $gray_b2);
-    font-weight: 600;
+    // @include text-shadow(0px 1px 0px $gray_b2);
+    font-weight: 400;
     color: $gray_b1;
   }
 
@@ -109,7 +110,7 @@ a:hover {
   //Work Styles
   .project {
     img {
-      border: 1px solid $gray;
+      border: 2px solid $gray;
       // opacity: 0.6;
       // &:hover {
       //   opacity: 1;
@@ -121,6 +122,18 @@ a:hover {
   .row.section {
     margin-top: rem-calc(30);
     margin-bottom: rem-calc(30);
+    padding: 5px;
+  }
+
+  .section.blue {
+    background: $blue;
+    color: #fff;
+    h3 {
+      color: #fff;
+    }
+    a:hover {
+      color: #fff;
+    }
   }
 
 
