--- a/_includes/services-clients.html
+++ b/_includes/services-clients.html
@@ -2,7 +2,7 @@
   <div class="small-12 columns">
     <h5 class="section-header">SERVICES OFFERED</h5>
     <div class="small-12 medium-5 columns">
-      <h5 class="section-subheader">Technical</h5>
+      <h6 class="section-subheader">TECHNICAL</h6>
       <ul>
         <li>Full Stack Web Design & Development (Back & Front End)</li>
         <li>Android Design & Development</li>
@@ -10,7 +10,7 @@
       </ul>
     </div>
     <div class="small-12 medium-5 medium-offset-2 columns">
-      <h5 class="section-subheader">Non-Technical</h5>
+      <h6 class="section-subheader">NON-TECHNICAL</h6>
       <ul>
         <li>UX Design</li>
         <li>Content Strategy</li>
