--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,22 +1,22 @@
 @import "settings";
-@import "foundation";
-@import "compass";
+// @import "foundation";
+
 
 // Or selectively include components
-// @import
+@import
 //   "foundation/components/accordion",
 //   "foundation/components/alert-boxes",
-//   "foundation/components/block-grid",
+  "foundation/components/block-grid",
 //   "foundation/components/breadcrumbs",
 //   "foundation/components/button-groups",
-//   "foundation/components/buttons",
+  "foundation/components/buttons",
 //   "foundation/components/clearing",
 //   "foundation/components/dropdown",
 //   "foundation/components/dropdown-buttons",
 //   "foundation/components/flex-video",
-//   "foundation/components/forms",
-//   "foundation/components/grid",
-//   "foundation/components/inline-lists",
+  "foundation/components/forms",
+  "foundation/components/grid",
+  "foundation/components/inline-lists",
 //   "foundation/components/joyride",
 //   "foundation/components/keystrokes",
 //   "foundation/components/labels",
@@ -36,9 +36,11 @@
 //   "foundation/components/thumbs",
 //   "foundation/components/tooltips",
 //   "foundation/components/top-bar",
-//   "foundation/components/type",
+  "foundation/components/type",
 //   "foundation/components/offcanvas",
-//   "foundation/components/visibility";
+  "foundation/components/visibility";
+
+@import "compass";
 
 @import "base";
 @import "graybike";
