Wording on hire me form

--- a/_includes/hireme.html
+++ b/_includes/hireme.html
@@ -3,7 +3,7 @@
 </div>
 <div class="small-12 medium-4 columns">
     <p>Got a cool project? I'd love to hear about it! Send me a little info and we'll get started!</p>
-    <p><em>If possible, let me know your ideal timeline, your current website, and any other info I need to understand your project.</em></p>
+    <p><em>If possible, let me know your timeline, your current website or app, and any other info I may need to understand your project.</em></p>
 </div>
 <div class="small-12 medium-8 columns">
     <form>
