--- a/_includes/services-clients.html
+++ b/_includes/services-clients.html
@@ -1,29 +1,8 @@
-<div class="row">
-  <div class="small-12 columns">
-    <h5 class="section-header">SERVICES OFFERED</h5>
-    <div class="small-12 medium-5 columns">
-      <h6 class="section-subheader">TECHNICAL</h6>
-      <ul>
-        <li>Full Stack Web Design & Development (Back & Front End)</li>
-        <li>Android Design & Development</li>
-        <li>Shopify Apps & Themes</li>
-      </ul>
-    </div>
-    <div class="small-12 medium-5 medium-offset-2 columns">
-      <h6 class="section-subheader">NON-TECHNICAL</h6>
-      <ul>
-        <li>UX Design</li>
-        <li>Content Strategy</li>
-        <li>Product Development</li>
-      </ul>
-    </div>
-  </div>
-</div>
-<div class="row">
+<div class="row section">
   <div class="small-12 columns">
     <div class="row">
       <div class="small-12 columns">
-        <h5 class="section-header">SOME FOLKS I'VE WORKED WITH</h5>
+        <h5 class="section-subheader">SOME FOLKS I'VE WORKED WITH</h5>
       </div>
     </div>
     <div class="row">
