Added more padding to blue section, animating work.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -4,19 +4,19 @@
     <div class="row">
       <div class="small-12 columns">
         <ul class="small-block-grid-2 medium-block-grid-4">
-          <li class="text-center project">
+          <li class="text-center project bounceIn animated">
             <img src="/images/work/truecurrency/tc-thumbnail.png">
             <h3><small>True Currency</small></h3>
           </li>
-          <li class="text-center project">
+          <li class="text-center project bounceIn animated">
             <img src="/images/work/2teecouture/2tee-thumbnail.png">
             <h3><small>2tee Couture</small></h3>
           </li>
-          <li class="text-center project">
+          <li class="text-center project bounceIn animated">
             <img src="/images/work/salt/salt-thumbnail.png">
             <h3><small>SALT Technologies</small></h3>
           </li>
-          <li class="text-center project">
+          <li class="text-center project bounceIn animated">
             <img src="/images/work/oncontracting/oc-thumbnail.png">
             <h3><small>OnContracting</small></h3>
           </li>
