--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,14 @@
     <div class="row">
         <div class="small-12 medium-4 columns">
             <div class="site-title bounceIn animated">
-                <div class="site-text"><a href="{{ site.baseurl }}/"><span>
-                {{ site.title }}
-                </span></a></div>
-                <a href="{{ site.baseurl }}/"><img src="/images/logo.png"></a>
+                <div class="site-logo">
+                    <a href="{{ site.baseurl }}/"><img src="/images/logo.png"></a>
+                </div>
+                <div class="site-text">
+                    <a href="{{ site.baseurl }}/"><span>
+                        {{ site.title }}
+                    </span></a>
+                </div>
             </div>
         </div>
         <div class="small-6 medium-2 columns nav-link">
