First testimonial up.

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -25,7 +25,7 @@
 
   <div class="small-12 columns">
     <h5 class="section-subheader">WHAT MY CLIENTS SAY</h5>
-    <blockquote>I do not fear computers. I fear the lack of them. Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur.<cite>Isaac Asimov</cite></blockquote>
+    <blockquote>Pavan is excellent at analyzing websites. He helped us in simplifying our homepage design and focusing on the primary value we provide our users. Going through discovery with Pavan helped us identify the various choices we have and consciously pick the ones we felt we were best suited to execute. I would happily recommend Pavan to anyone that needs guidance in improving the design or conversion rates of their websites.<cite>Pradeep Chauhan, CEO of OnContracting.com</cite></blockquote>
   </div>
 </div>
 
