--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700|Open+Sans+Condensed:700|Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
-    <script src='/js/jquery-2.1.1.min.js'  type='text/javascript'></script>
-    <script src='/js/jquery.simple-text-rotator.min.js'  type='text/javascript'></script>
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/app.css" | prepend: site.baseurl }}">
-
+    <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
